update nitrite to 4.2.1.